--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="style.css">
+
     <script src="script.js"></script>
 
     <title>Formulario</title>
@@ -13,153 +15,160 @@
 
     <form action="" id="formulario">
 
-        <label for="nome">Nome</label>
-        <input type="text" name="nome" id="nome_pessoa">
+        <div>
+
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome">
+
+            <br>
+
+            <label for="idade">Idade</label>
+            <input type="number" name="idade" id="idade">
+
+            <br>
+
+            <label for="altura">altura</label>
+            <input type="number" name="altura" id="altura">
+
+            <br>
+        </div>
+
+        <div>
+
+        </div>
+
+        <label for="datanacimento">Data de nacsimento</label>
+        <input type="date" name="datanacimento" id="data">
 
         <br>
 
-        <label for="idade">idade</label>
-        <input type="number" name="idade" id="idade_pessoa">
+        <label for="semana">semana atual</label>
+        <input type="week" name="semana" id="semana">
 
         <br>
 
-        <label for="datanacimento">data de nacsimento</label>
-        <input type="date" name="datanacimento" id="data_pessoa">
+        <label for="Horario">Horario atual</label>
+        <input type="time" name="Horario" id="Horario">
 
         <br>
 
-        <label for="altura">altura</label>
-        <input type="number" name="altura" id="altura_pessoa">
+        <label for="corolho">Cor do olho</label>
+        <input type="color" name="corolho" id="olho">
 
         <br>
 
-        <label for="corolho">cor do olho</label>
-        <input type="color" name="corolho" id="olho_pessoa">
+        <label for="corcabelo">Cor do cabelo</label>
+        <input type="color" name="corcabelo" id="cabelo">
 
         <br>
 
-        <label for="corcabelo">cor do cabelo</label>
-        <input type="color" name="corcabelo" id="cabelo_pessoa">
+        <label for="corpreferida">cor preferida </label>
+        <input type="color" name="corpreferida" id="cor">
 
         <br>
 
-        <label for="corpele"> </label>
-        <input type="text" name="" id="">
+        <label for="email">email</label>
+        <input type="email" name="email" id="email">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="senha">senha</label>
+        <input type="password" name="senha" id="senha">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="animal">vc tem algum animal</label>
+        <input type="checkbox" name="animal" id="animal">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="irmaos">tem irmãos</label>
+        <input type="checkbox" name="irmaos" id="irmaos">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="carro">vc tem carro</label>
+        <input type="checkbox" name="carro" id="carro">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="modelocarro">modelo do carro</label>
+        <input type="text" name="modelocarro" id="modelo">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="corcarro">cor do carro</label>
+        <input type="color" name="corcarro" id="corcarro">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="nomepai">nome do seu pai</label>
+        <input type="text" name="nomepai" id="nomepai">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="idadepai">idade do seu pai</label>
+        <input type="number" name="idadepai" id="idadepai">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="alturapai">altura do seu pai</label>
+        <input type="number" name="alturapai" id="alturapai">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="corpai">cor favorita do seu pai</label>
+        <input type="color" name="corpai" id="corpai">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="nomemãe">nome da sua mãe</label>
+        <input type="text" name="nomemãe" id="nomemãe">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="idademãe">idade da sua mãe</label>
+        <input type="number" name="idademãe" id="idademãe">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="alturamãe">altura da sua mãe</label>
+        <input type="number" name="alturamãe" id="alturamãe">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="cormãe">cor favorita da sua mãe</label>
+        <input type="color" name="cormãe" id="cormãe">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="time">torce pra algum time</label>
+        <input type="checkbox" name="time" id="time">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="nometime">nome do time</label>
+        <input type="text" name="nometime" id="nometime">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="cortime">cor do time</label>
+        <input type="color" name="cortime" id="cortime">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="filme">filme favorito</label>
+        <input type="text" name="filme" id="filme">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="ator">ator favorito</label>
+        <input type="text" name="ator" id="ator">
 
         <br>
 
-        <label for=""></label>
-        <input type="text" name="" id="">
-
-        <br>
-
-        <label for=""></label>
-        <input type="text" name="" id="">
-
-        <br>
-
-        <label for=""></label>
-        <input type="text" name="" id="">
-
-        <br>
-
-        <label for=""></label>
-        <input type="text" name="" id="">
+        <label for="formulario">gostou do formulario</label>
+        <input type="checkbox" name="formulario" id="formulario">
 
         <br>
 
