--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <form action="" id="formulario">
 
-        <div>
-
+        <div class="bloco">
             <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome">
 
@@ -31,147 +30,151 @@
             <input type="number" name="altura" id="altura">
 
             <br>
+
+            <label for="datanacimento">Data de nacsimento</label>
+            <input type="date" name="datanacimento" id="data">
+
+            <br>
+
+            <label for="corolho">Cor do olho</label>
+            <input type="color" name="corolho" id="olho">
+
+            <br>
+
+            <label for="corcabelo">Cor do cabelo</label>
+            <input type="color" name="corcabelo" id="cabelo">
+
+            <br>
+
+            <label for="corpreferida">cor preferida </label>
+            <input type="color" name="corpreferida" id="cor">
+
+            <br>
         </div>
 
-        <div>
+        <div class="bloco">
+            <label for="semana">semana atual</label>
+            <input type="week" name="semana" id="semana">
 
+            <br>
+
+            <label for="Horario">Horario atual</label>
+            <input type="time" name="Horario" id="Horario">
+
+            <br>
+
+            <label for="email">email</label>
+            <input type="email" name="email" id="email">
+
+            <br>
+
+            <label for="senha">senha</label>
+            <input type="password" name="senha" id="senha">
+
+            <br>
+
+            <label for="animal">vc tem algum animal</label>
+            <input type="checkbox" name="animal" id="animal">
+
+            <br>
+
+            <label for="irmaos">tem irmãos</label>
+            <input type="checkbox" name="irmaos" id="irmaos">
+
+            <br>
         </div>
 
-        <label for="datanacimento">Data de nacsimento</label>
-        <input type="date" name="datanacimento" id="data">
+        <div class="bloco">
+            <label for="carro">vc tem carro</label>
+            <input type="checkbox" name="carro" id="carro">
 
-        <br>
+            <br>
 
-        <label for="semana">semana atual</label>
-        <input type="week" name="semana" id="semana">
+            <label for="modelocarro">modelo do carro</label>
+            <input type="text" name="modelocarro" id="modelo">
 
-        <br>
+            <br>
 
-        <label for="Horario">Horario atual</label>
-        <input type="time" name="Horario" id="Horario">
+            <label for="corcarro">cor do carro</label>
+            <input type="color" name="corcarro" id="corcarro">
 
-        <br>
+            <br>
+        </div>
 
-        <label for="corolho">Cor do olho</label>
-        <input type="color" name="corolho" id="olho">
+        <div class="bloco">
+            <label for="nomepai">nome do seu pai</label>
+            <input type="text" name="nomepai" id="nomepai">
 
-        <br>
+            <br>
 
-        <label for="corcabelo">Cor do cabelo</label>
-        <input type="color" name="corcabelo" id="cabelo">
+            <label for="idadepai">idade do seu pai</label>
+            <input type="number" name="idadepai" id="idadepai">
 
-        <br>
+            <br>
 
-        <label for="corpreferida">cor preferida </label>
-        <input type="color" name="corpreferida" id="cor">
+            <label for="alturapai">altura do seu pai</label>
+            <input type="number" name="alturapai" id="alturapai">
 
-        <br>
+            <br>
 
-        <label for="email">email</label>
-        <input type="email" name="email" id="email">
+            <label for="corpai">cor favorita do seu pai</label>
+            <input type="color" name="corpai" id="corpai">
 
-        <br>
+            <br>
 
-        <label for="senha">senha</label>
-        <input type="password" name="senha" id="senha">
+            <label for="nomemãe">nome da sua mãe</label>
+            <input type="text" name="nomemãe" id="nomemãe">
 
-        <br>
+            <br>
 
-        <label for="animal">vc tem algum animal</label>
-        <input type="checkbox" name="animal" id="animal">
+            <label for="idademãe">idade da sua mãe</label>
+            <input type="number" name="idademãe" id="idademãe">
 
-        <br>
+            <br>
 
-        <label for="irmaos">tem irmãos</label>
-        <input type="checkbox" name="irmaos" id="irmaos">
+            <label for="alturamãe">altura da sua mãe</label>
+            <input type="number" name="alturamãe" id="alturamãe">
 
-        <br>
+            <br>
 
-        <label for="carro">vc tem carro</label>
-        <input type="checkbox" name="carro" id="carro">
+            <label for="cormãe">cor favorita da sua mãe</label>
+            <input type="color" name="cormãe" id="cormãe">
 
-        <br>
+            <br>
+        </div>
+        <div class="bloco">
+            <label for="time">torce pra algum time</label>
+            <input type="checkbox" name="time" id="time">
 
-        <label for="modelocarro">modelo do carro</label>
-        <input type="text" name="modelocarro" id="modelo">
+            <br>
 
-        <br>
+            <label for="nometime">nome do time</label>
+            <input type="text" name="nometime" id="nometime">
 
-        <label for="corcarro">cor do carro</label>
-        <input type="color" name="corcarro" id="corcarro">
+            <br>
 
-        <br>
+            <label for="cortime">cor do time</label>
+            <input type="color" name="cortime" id="cortime">
 
-        <label for="nomepai">nome do seu pai</label>
-        <input type="text" name="nomepai" id="nomepai">
+            <br>
+        </div>
 
-        <br>
+        <div class="bloco">
+            <label for="filme">filme favorito</label>
+            <input type="text" name="filme" id="filme">
 
-        <label for="idadepai">idade do seu pai</label>
-        <input type="number" name="idadepai" id="idadepai">
+            <br>
 
-        <br>
+            <label for="ator">ator favorito</label>
+            <input type="text" name="ator" id="ator">
 
-        <label for="alturapai">altura do seu pai</label>
-        <input type="number" name="alturapai" id="alturapai">
+            <br>
 
-        <br>
+            <label for="formulario">gostou do formulario</label>
+            <input type="checkbox" name="formulario" id="formulario">
 
-        <label for="corpai">cor favorita do seu pai</label>
-        <input type="color" name="corpai" id="corpai">
-
-        <br>
-
-        <label for="nomemãe">nome da sua mãe</label>
-        <input type="text" name="nomemãe" id="nomemãe">
-
-        <br>
-
-        <label for="idademãe">idade da sua mãe</label>
-        <input type="number" name="idademãe" id="idademãe">
-
-        <br>
-
-        <label for="alturamãe">altura da sua mãe</label>
-        <input type="number" name="alturamãe" id="alturamãe">
-
-        <br>
-
-        <label for="cormãe">cor favorita da sua mãe</label>
-        <input type="color" name="cormãe" id="cormãe">
-
-        <br>
-
-        <label for="time">torce pra algum time</label>
-        <input type="checkbox" name="time" id="time">
-
-        <br>
-
-        <label for="nometime">nome do time</label>
-        <input type="text" name="nometime" id="nometime">
-
-        <br>
-
-        <label for="cortime">cor do time</label>
-        <input type="color" name="cortime" id="cortime">
-
-        <br>
-
-        <label for="filme">filme favorito</label>
-        <input type="text" name="filme" id="filme">
-
-        <br>
-
-        <label for="ator">ator favorito</label>
-        <input type="text" name="ator" id="ator">
-
-        <br>
-
-        <label for="formulario">gostou do formulario</label>
-        <input type="checkbox" name="formulario" id="formulario">
-
-        <br>
-
+            <br>
+        </div>
         <button type="button" onclick="validarformulario()">enviar </button>
 
     </form>
