--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <br>
 
-            <label for="altura">altura</label>
+            <label for="altura">Altura</label>
             <input type="number" name="altura" id="altura">
 
             <br>
@@ -46,14 +46,14 @@
 
             <br>
 
-            <label for="corpreferida">cor preferida </label>
+            <label for="corpreferida">Cor preferida </label>
             <input type="color" name="corpreferida" id="cor">
 
             <br>
         </div>
 
         <div class="bloco">
-            <label for="semana">semana atual</label>
+            <label for="semana">Semana atual</label>
             <input type="week" name="semana" id="semana">
 
             <br>
@@ -63,76 +63,76 @@
 
             <br>
 
-            <label for="email">email</label>
+            <label for="email">Email</label>
             <input type="email" name="email" id="email">
 
             <br>
 
-            <label for="senha">senha</label>
+            <label for="senha">Senha</label>
             <input type="password" name="senha" id="senha">
 
             <br>
 
-            <label for="animal">vc tem algum animal</label>
+            <label for="animal">Vc tem algum animal</label>
             <input type="checkbox" name="animal" id="animal">
 
             <br>
 
-            <label for="irmaos">tem irmãos</label>
+            <label for="irmaos">Tem irmãos</label>
             <input type="checkbox" name="irmaos" id="irmaos">
 
             <br>
         </div>
 
         <div class="bloco">
-            <label for="carro">vc tem carro</label>
+            <label for="carro">Vc tem carro</label>
             <input type="checkbox" name="carro" id="carro">
 
             <br>
 
-            <label for="modelocarro">modelo do carro</label>
+            <label for="modelocarro">Modelo do carro</label>
             <input type="text" name="modelocarro" id="modelo">
 
             <br>
 
-            <label for="corcarro">cor do carro</label>
+            <label for="corcarro">Cor do carro</label>
             <input type="color" name="corcarro" id="corcarro">
 
             <br>
         </div>
 
         <div class="bloco">
-            <label for="nomepai">nome do seu pai</label>
+            <label for="nomepai">Nome do seu pai</label>
             <input type="text" name="nomepai" id="nomepai">
 
             <br>
 
-            <label for="idadepai">idade do seu pai</label>
+            <label for="idadepai">Idade do seu pai</label>
             <input type="number" name="idadepai" id="idadepai">
 
             <br>
 
-            <label for="alturapai">altura do seu pai</label>
+            <label for="alturapai">Altura do seu pai</label>
             <input type="number" name="alturapai" id="alturapai">
 
             <br>
 
-            <label for="corpai">cor favorita do seu pai</label>
+            <label for="corpai">Cor favorita do seu pai</label>
             <input type="color" name="corpai" id="corpai">
 
             <br>
 
-            <label for="nomemãe">nome da sua mãe</label>
+            <label for="nomemãe">Nome da sua mãe</label>
             <input type="text" name="nomemãe" id="nomemãe">
 
             <br>
 
-            <label for="idademãe">idade da sua mãe</label>
+            <label for="idademãe">Idade da sua mãe</label>
             <input type="number" name="idademãe" id="idademãe">
 
             <br>
 
-            <label for="alturamãe">altura da sua mãe</label>
+            <label for="alturamãe">Altura da sua mãe</label>
             <input type="number" name="alturamãe" id="alturamãe">
 
             <br>
